app/assets/stylesheets/partials/objects/_menu.scss
.top-page-menu {
    .active {
        border-bottom: 3px solid $orange;
        a {
            font-weight: bold !important;
        }
    }
}
.page-menu {
    padding: 0;
    li {
        a {
            padding  : 0.5em 0;
            font-size: 1em;
            width    : 100%;
            border-top   : 2px solid $beige;
            border-bottom: 2px solid $beige;
            @include transition(border-color 250ms);
        }
        &:hover a {
            text-decoration : none;
            border-top      : 2px solid lighten($orange, 20%);
            border-bottom   : 2px solid lighten($orange, 20%);
        }
        &.active a {
            border-top   : 2px solid $orange;
            border-bottom: 2px solid $orange;
            background   : white;
        }
    }
}

.nav-menu {
    ul {
        a {
            padding: 1em;
        }
    }
}

.submenu-link {
    margin-right: 1em;
}

$side-menu-width--large: 250px;
$side-menu-width       : 200px;
.side-menu {
    &.one-whole { width: 100%; }
    width         : $side-menu-width;
    padding-bottom: 150px;
    @include transition(width 150ms ease);
    @media screen and (min-width: 1400px) { width: $side-menu-width--large; }
    .side-menu__footer {
        width: $side-menu-width;
        @media screen and (min-width: 1400px) { width: $side-menu-width--large; }
    }

    ul {
        list-style: none;
        margin    : 0;
        width     : 100%;
        li {
            &.subtitle {
                color      : #D0D0D0;
                font-size  : 12px;
                margin-top : 30px;
                padding    : 0.7em 0 0.7em 1.3em;
                font-weight: bold;
            }
            &.sidemenu--extra, &.sidemenu--extra.active {
                background-color: $green-success;
                &.active {
                    box-shadow: inset 0px 0px 10px darken($green-success, 4%);
                    border-right       : 3px solid darken($green-success, 10%);
                    border-bottom-color: darken($green-success, 4%);
                }
                &:hover {
                    background-color: lighten($green-success, 10%);
                }
                a { color: white; }
            }
            @include transition(background-color 150ms linear);
            &.active {
                font-weight : bold;
            }
            &.active, &.active:hover {
                background-color   : $blue;
                a { color: white; }
            }
            .side-menu-link {
                & { text-decoration: none; }
                color       : #6F6F6F;
                display     : block;
                font-size   : 15px;
                padding     : 0.7em 0 0.7em 1.3em;
                i:first-child {
                    padding-right : 1em;
                    width         : 35px;
                    text-align    : center;
                    font-size     : 18px;
                    vertical-align: bottom;
                }
                i.completion-icon {
                    line-height: 1.5;
                }
            }
        }
    }
}

.side-menu--sticky {
    height        : 100%;
    padding-bottom: 150px;
    &.sticky{
        overflow: scroll;
    }
}
.pro-top-menu {
    height: 45px;
}
.user-top-menu {
    > div:hover {
        border-bottom: 4px solid #AAA;
    }
    .active, .active:hover {
        border-bottom: 4px solid #EEE;
    }
    > div {
        position: relative;
        top   : 1px;
    }
}

